--- a/MuckReborn.vcxproj.filters
+++ b/MuckReborn.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="MuckReborn\include\util\Pair.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MuckReborn\include\world\Chunk.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MuckReborn\include\math\Noise.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MuckReborn\MuckReborn.cpp">
